--- a/Quiz/Views/Shared/_Layout.cshtml
+++ b/Quiz/Views/Shared/_Layout.cshtml
@@ -4,9 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Quiz</title>
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Quiz.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Quiz.Web.styles.css" asp-append-version="true" />
+
+    <!-- Toastr notification -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
+
+    <!-- Data table -->
+    <link rel="stylesheet" href="//cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
 </head>
 <body>
     <header>
@@ -32,6 +39,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <partial name="_ToastNotificationPartial"></partial>
             @RenderBody()
         </main>
     </div>
@@ -41,9 +49,20 @@
             &copy; 2023 - Quiz - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+   @* <script src="~/lib/jquery/dist/jquery.js"></script>*@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <!-- Toastr notification -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js">
+    </script>
+
+    <!-- Data table -->
+    <script src="//cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js">
+    </script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
