--- a/Quiz/Views/_ViewImports.cshtml
+++ b/Quiz/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Quiz
 @using Quiz.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Quiz.Web.ViewModels;
+@using Quiz.Models.Entities;
