--- a/Quiz/Views/Quotes/Quotes.cshtml
+++ b/Quiz/Views/Quotes/Quotes.cshtml
@@ -18,9 +18,9 @@
     <table class="table table-bordered table-striped" width="100%" id="quotesTable">
         <thead>
             <tr>
-                <th class="col-8 text-center"><h4>Text</h4></th>
+                <th class="col-8 text-center"><h4>Quote</h4></th>
                 <th class="col-1 text-center"><h4>Author</h4></th>
-               @* <th class="col-2"></th>*@
+                <th class="col-2"></th>
             </tr>
         </thead>
     </table>
