--- a/Quiz/Views/Quotes/EditQuote.cshtml
+++ b/Quiz/Views/Quotes/EditQuote.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model QuoteVM
+﻿@model QuoteVM
 
 <div class="container col-md-8">
     <div class="card shadow border-0 mt-4 justify-content-center">
@@ -8,7 +7,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <h2 class="text-white text-center fw-bold">
-                        New Quote
+                        Edit Quote
                     </h2>
                 </div>
             </div>
@@ -36,12 +35,12 @@
                         <div class="mt-4">
                             <div class="d-flex justify-content-between">
                                 <a asp-controller="Quotes" asp-action="Quotes"
-                                    class="btn btn-secondary col-6 col-md-3">
+                                   class="btn btn-secondary col-6 col-md-3">
                                     Back
                                 </a>
 
                                 <button type="submit" class="btn btn-outline-primary col-6 col-md-3 fw-bold">
-                                    New Quote
+                                    Edit Quote
                                 </button>
                             </div>
                         </div>
