--- a/Quiz/Views/Users/AnswerQuote.cshtml
+++ b/Quiz/Views/Users/AnswerQuote.cshtml
@@ -2,16 +2,35 @@
 
 <div class="container col-md-6">
     <div class="card shadow border-0 mt-4 justify-content-center">
-        <div class="card-header bg-primary bg-gradient ml-0">
+       
+       @* <div class="card-header row">     
+        </div>*@
 
-            <div class="row">
-                <div class="col-12 text-center">
-                    <h2 class="text-white text-center fw-bold">
-                        Answer Quote
-                    </h2>
-                </div>
+        <ul class="nav nav-tabs">
+            <li class="nav-item col-6 bg-secondary">
+                <a class="nav-link active" aria-current="page" href="#">Active</a>
+            </li>
+
+            <li class="nav-item col-6 bg-secondary">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+        </ul>
+
+       @* <div class="row">
+            <div class="col-12">
+                <div class="row">
+                    <button type="button" class="btn btn-secondary  col-6">
+                        1
+                    </button>
+
+                    <button type="button" class="btn btn-secondary col-6">
+                        2
+                    </button>
+                </div>               
             </div>
-        </div>
+        </div>*@
+
+ 
 
         <div class="card-body justify-content-center">
             <form method="post">
