QuoteFK AnswerQuote form

--- a/Quiz/Views/Quotes/CreateQuote.cshtml
+++ b/Quiz/Views/Quotes/CreateQuote.cshtml
@@ -25,7 +25,7 @@
                             <span asp-validation-for="Text" class="text-danger"></span>
                         </div>
 
-                        <div class="row form-floating shadow mt-4 me-2">
+                        <div class="row form-floating shadow mt-4">
                             <select asp-for="AuthorId" asp-items="@Model.AuthorsDropDown"
                                     class="form-select">
                             </select>
