Order User Questions by id

--- a/Quiz/Views/Users/Quotes.cshtml
+++ b/Quiz/Views/Users/Quotes.cshtml
@@ -10,6 +10,7 @@
     <table class="table table-bordered table-striped" width="100%" id="usersQuotesTable">
         <thead>
             <tr>
+                <th class="col-1 text-center">Order</th>
                 <th class="col-8 text-center"><h4>Quote</h4></th>
                 <th class="col-1"></th>
             </tr>
