--- a/Quiz/Views/Users/AnswerQuestion.cshtml
+++ b/Quiz/Views/Users/AnswerQuestion.cshtml
@@ -1,4 +1,4 @@
-﻿@model QuoteVM
+﻿@model Question
 
 <div class="container col-md-6">
     <div class="card shadow border-0 mt-4 justify-content-center">
@@ -20,14 +20,14 @@
                 <div class="container justify-content-center">
                     <div class="mb-4">
                         <div class="row form-floating shadow">
-                            <textarea rows="4" asp-for="Text" 
+                            <textarea rows="4" asp-for="@Model.AskedQuote.Text" 
                                       class="form-control" readonly style="background-color:deeppink">
                             </textarea>
                         </div>
 
                         <div class="mt-4">
                             <div class="mt-2 text-center">
-                                <p>@Model.Author.Name ?</p>
+                                <p>@Model.CorrectAuthor.Name ?</p>
                             </div>
 
                             <!-- YesNoButtons -->
