--- a/Quiz/Views/Users/AnswerQuestion.cshtml
+++ b/Quiz/Views/Users/AnswerQuestion.cshtml
@@ -18,7 +18,11 @@
                 <input asp-for="FalseAuthor1" hidden/>
                 <input asp-for="FalseAuthor1" hidden />
                 <input asp-for="CorrectAuthorId" hidden />
-
+                <input asp-for="QuoteId" hidden/>
+                <input asp-for="Id" hidden />
+                <input asp-for="RandomAuthorId" hidden />
+                <input asp-for="RandomAuthor" hidden />
+                <input asp-for="CorrectAuthor" hidden />
                 <h4> Who said it ?</h4>
 
                 <div class="container justify-content-center">
