Login and register

--- a/Quiz/Views/Shared/_Layout.cshtml
+++ b/Quiz/Views/Shared/_Layout.cshtml
@@ -51,9 +51,20 @@
                                     <hr class="dropdown-divider">
                                 </li>
 
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-controller="Accounts" asp-action="Users">
+                                        Users
+                                    </a>
+                                </li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
                             </ul>
                         </li>
                     </ul>
+
+                    <!-- _AccountIdentity Partial View -->
+                    <partial name="_AccountIdentity.cshtml">
                 </div>
             </div>
         </nav>
