Save user asnwer

--- a/Quiz/Views/Users/AnswerQuestion.cshtml
+++ b/Quiz/Views/Users/AnswerQuestion.cshtml
@@ -35,7 +35,7 @@
 
                         <div class="mt-4">
                             <div class="mt-2 text-center">
-                                <p>@Model.CorrectAuthor.Name ?</p>
+                                <p>@Model.RandomAuthor.Name ?</p>
                             </div>
 
                             <!-- YesNoButtons -->
