--- a/Quiz/Views/Users/AnswerQuestion.cshtml
+++ b/Quiz/Views/Users/AnswerQuestion.cshtml
@@ -2,60 +2,94 @@
 
 <div class="container col-md-6">
     <div class="card shadow border-0 mt-4 justify-content-center">
-       
-        <ul class="nav nav-tabs">
-            <li class="nav-item col-6 bg-secondary" id="YesOrNo">
-                <a class="nav-link active" aria-current="page" href="#">Active</a>
-            </li>
-
-            <li class="nav-item col-6 bg-secondary" id="Multiple">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-        </ul>
-
         <div class="card-body justify-content-center">
             <form method="post">
-                <input asp-for="FalseAuthor1" hidden/>
+                <input asp-for="FalseAuthor1" hidden />
                 <input asp-for="FalseAuthor1" hidden />
                 <input asp-for="CorrectAuthorId" hidden />
-                <input asp-for="QuoteId" hidden/>
+                <input asp-for="QuoteId" hidden />
                 <input asp-for="Id" hidden />
                 <input asp-for="RandomAuthorId" hidden />
                 <input asp-for="RandomAuthor" hidden />
                 <input asp-for="CorrectAuthor" hidden />
-                <h4> Who said it ?</h4>
 
-                <div class="container justify-content-center">
-                    <div class="mb-4">
-                        <div class="row form-floating shadow">
-                            <textarea rows="4" asp-for="@Model.AskedQuote.Text" 
-                                      class="form-control" readonly style="background-color:deeppink">
-                            </textarea>
-                        </div>
+                <div class="container" style="margin-top: 10px;">
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-pills">
+                        <li class="nav-item col-6 text-center">
+                            <a class="nav-link active" data-bs-toggle="pill" href="#yesOrNo">
+                                <i class="bi bi-list-ul text-center"></i>
+                             </a>
+                        </li>
 
-                        <div class="mt-4">
-                            <div class="mt-2 text-center">
-                                <p>@Model.RandomAuthor.Name ?</p>
-                            </div>
+                        <li class="nav-item col-6 text-center">
+                            <a class="nav-link" data-bs-toggle="pill" href="#multiple">
+                                <i class="bi bi-stack"></i>
+                                @*<i class="bi bi-copy fa-3x"></i>*@
+                            </a>
+                        </li>
+   
+                    </ul>
 
-                            <!-- YesNoButtons -->
-                            <div id="YesNoButtons">
-                                <div class="d-flex justify-content-between">
-                                    <button name="submit" type="submit" 
-                                            class="btn btn-outline-primary col-6 col-md-3 fw-bold"
-                                            style="background-color:limegreen" value="yes">
-                                        Yes
-                                    </button>
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div class="tab-pane container active" id="yesOrNo">
+                            <h4 class="mt-2"> Who Said it ?</h4>
+                            <!-- Yes or NO -->
+                            <div class="container justify-content-center">
+                                <div class="mb-4">
+                                    <div class="row form-floating shadow">
+                                        <textarea 
+                                            asp-for="@Model.AskedQuote.Text"
+                                            class="form-control" readonly
+                                            style="background-color:deeppink; min-width:500px; max-width:100%;min-height:100px;height:100%;width:100%;">
+                                         </textarea>
+                                    </div>
 
-                                    <button name="submit" type="submit" 
-                                            class="btn btn-outline-primary col-6 col-md-3 fw-bold"
-                                            style="background-color:crimson" value="no">
-                                        No
-                                    </button>
+                                    <div class="mt-4">
+                                        <div class="mt-2 text-center">
+                                            <p>@Model.RandomAuthor.Name ?</p>
+                                        </div>
+
+                                        <!-- YesNoButtons -->
+                                        <div class="d-flex justify-content-between">
+                                            <button name="submit" type="submit"
+                                                    class="btn col-6 col-md-3 fw-bold text-white"
+                                                    style="background-color:limegreen" value="yes">
+                                                Yes
+                                            </button>
+
+                                            <button name="submit" type="submit"
+                                                    class="btn col-6 col-md-3 fw-bold text-white"
+                                                    style="background-color:crimson" value="no">
+                                                No
+                                            </button>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                       
+
+                        <div class="tab-pane container fade" id="multiple">
+                            <h4 class="mt-2"> Who Said it ?</h4>
+                            <!-- Multiple -->
+                            <div class="container justify-content-center">
+                                <div class="mt-4">
+                                    <!-- Multiple Options -->
+                                    <div class="form-check">
+                                        @foreach (Author author in Model.MultipleOptionAuthorList)
+                                        {
+                                            <div>
+                                                <input class="form-check-input" type="radio" name="@author.Name" id="@author.Name">
+                                                <label class="form-check-label" for="@author.Name">
+                                                    @author.Name
+                                                </label>
+                                            </div>
+                                        }
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </form>
