--- a/Quiz/Views/Users/AnswerQuestion.cshtml
+++ b/Quiz/Views/Users/AnswerQuestion.cshtml
@@ -1,5 +1,15 @@
 ﻿@model QuestionVM
 
+@*<style>
+    .button input[type="radio"] {
+        display: none;
+    }
+
+    input[type="radio"]:checked + label {
+        border: 1px solid red;
+    }
+</style>*@
+
 <div class="container col-md-6">
     <div class="card shadow border-0 mt-4 justify-content-center">
         <div class="card-body justify-content-center">
@@ -13,22 +23,20 @@
                 <input asp-for="RandomAuthor" hidden />
                 <input asp-for="CorrectAuthor" hidden />
 
+                <!-- Nav tabs -->
                 <div class="container" style="margin-top: 10px;">
-                    <!-- Nav tabs -->
                     <ul class="nav nav-pills">
                         <li class="nav-item col-6 text-center">
                             <a class="nav-link active" data-bs-toggle="pill" href="#yesOrNo">
                                 <i class="bi bi-list-ul text-center"></i>
-                             </a>
+                            </a>
                         </li>
 
                         <li class="nav-item col-6 text-center">
                             <a class="nav-link" data-bs-toggle="pill" href="#multiple">
-                                <i class="bi bi-stack"></i>
-                                @*<i class="bi bi-copy fa-3x"></i>*@
+                                <i class="bi bi-stack text-center"></i>
                             </a>
                         </li>
-   
                     </ul>
 
                     <!-- Tab panes -->
@@ -39,10 +47,9 @@
                             <div class="container justify-content-center">
                                 <div class="mb-4">
                                     <div class="row form-floating shadow">
-                                        <textarea 
-                                            asp-for="@Model.AskedQuote.Text"
-                                            class="form-control" readonly
-                                            style="background-color:deeppink; min-width:500px; max-width:100%;min-height:100px;height:100%;width:100%;">
+                                        <textarea asp-for="@Model.AskedQuote.Text"
+                                                  class="form-control" readonly
+                                                  style="background-color:deeppink; min-width:500px; max-width:100%;min-height:100px;height:100%;width:100%;">
                                          </textarea>
                                     </div>
 
@@ -79,9 +86,11 @@
                                     <div class="form-check">
                                         @foreach (Author author in Model.MultipleOptionAuthorList)
                                         {
-                                            <div>
-                                                <input class="form-check-input" type="radio" name="@author.Name" id="@author.Name">
-                                                <label class="form-check-label" for="@author.Name">
+                                            <!-- div class button -->
+                                            <div class="form-check" style="background-color:gray">
+                                                <input class="form-check-input" type="radio" name="radioBtn" id="@author.Name" value="@author.Id">
+                                               @* <i class="bi bi-arrow-right-short"></i>*@
+                                                <label class="form-check-label text-white" for="@author.Name">
                                                     @author.Name
                                                 </label>
                                             </div>
