--- a/Quiz/Views/Shared/_Layout.cshtml
+++ b/Quiz/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                     </ul>
 
                     <!-- _AccountIdentity Partial View -->
-                    <partial name="_AccountIdentity.cshtml">
+                    <partial name="_LogInOrRegisterPartial.cshtml">
                 </div>
             </div>
         </nav>
