--- a/Quiz/Views/Shared/_Layout.cshtml
+++ b/Quiz/Views/Shared/_Layout.cshtml
@@ -51,8 +51,8 @@
                                     </li>
 
                                     <li class="nav-item">
-                                        <a class="dropdown-item" asp-controller="Accounts" asp-action="Users">
-                                            Users
+                                        <a class="dropdown-item" asp-controller="Accounts" asp-action="UserAchievements">
+                                            User Achievements
                                         </a>
                                     </li>
                                     <li>
