create Users table

--- a/Quiz/Views/Shared/_Layout.cshtml
+++ b/Quiz/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                                     </li>
 
                                     <li class="nav-item">
-                                        <a class="dropdown-item" asp-controller="Accounts" asp-action="UserAchievements">
+                                        <a class="dropdown-item" asp-controller="Accounts" asp-action="Users">
                                             User Achievements
                                         </a>
                                     </li>
