--- a/Quiz/Views/Accounts/Users.cshtml
+++ b/Quiz/Views/Accounts/Users.cshtml
@@ -7,11 +7,11 @@
 <div class="container justify-content-center col-md-8">
     <div class="row mb-2">
         <div class="col-6">
-            <h2 class="text-primary">User Achievements</h2>
+            <h2 class="text-primary">User</h2>
         </div>
     </div>
 
-    <table class="table table-bordered table-striped" width="100%" id="userAchievementsTable">
+    <table class="table table-bordered table-striped" width="100%" id="usersTable">
         <thead>
             <tr>
                 <th class="col-2 text-center">Name</th>
