--- a/Quiz/Views/Users/AnswerQuestion.cshtml
+++ b/Quiz/Views/Users/AnswerQuestion.cshtml
@@ -10,7 +10,7 @@
                 <input asp-for="FalseAuthor1Id" hidden />
                 <input asp-for="FalseAuthor2Id" hidden />
                 <input asp-for="QuoteId" hidden />
-                <input asp-for="RandomAuthorId" hidden />
+                <input asp-for="OptionAuthorId" hidden />
 
                 <!-- Nav tabs -->
                 <div class="container" style="margin-top: 10px;">
@@ -47,7 +47,7 @@
                                         {
                                             <!-- Option Author -->
                                             <div class="mt-2 text-center">
-                                                <p>@Model.RandomAuthor.Name ?</p>
+                                                <p>@Model.OptionAuthor.Name ?</p>
                                             </div>
 
                                             <!-- YesNoButtons -->
