--- a/Quiz/Views/Accounts/Users.cshtml
+++ b/Quiz/Views/Accounts/Users.cshtml
@@ -6,9 +6,7 @@
 
 <div class="container justify-content-center col-md-8">
     <div class="row mb-2">
-        <div class="col-6">
-            <h2 class="text-primary">Users</h2>
-        </div>
+        <h2 class="text-primary text-center">Users</h2>
     </div>
 
     <table class="table table-bordered table-striped" width="100%" id="usersTable">
