--- a/Quiz/Views/Accounts/UserAchievements.cshtml
+++ b/Quiz/Views/Accounts/UserAchievements.cshtml
@@ -6,15 +6,13 @@
 
 <div class="container justify-content-center col-md-8">
     <div class="row mb-2">
-        <div class="col-6">
-            <h2 class="text-primary">User Achievements</h2>
-        </div>
+        <h2 class="text-primary text-center">User Achievements</h2>
     </div>
 
     <table class="table table-bordered table-striped" width="100%" id="usersAchievementsTable">
         <thead>
             <tr>
-                <th class="col-1 text-center">
+                <th class="col-6 text-center">
                     <h4>Quote</h4>
                 </th>
                 <th class="col-1 text-center">
@@ -26,7 +24,6 @@
                 <th class="col-1">
                     <h4>Is Correct</h4>
                 </th>
-                <th class="col-1"></th>
             </tr>
         </thead>
         <tbody>
