--- a/Quiz/Views/Accounts/Users.cshtml
+++ b/Quiz/Views/Accounts/Users.cshtml
@@ -12,7 +12,7 @@
     <table class="table table-bordered table-striped" width="100%" id="usersTable">
         <thead>
             <tr>
-                <th class="col-2 text-center">Name</th>
+                <th class="col-2 text-center"><h4>Name</h4></th>
                 <th class="col-2 text-center"><h4>Email</h4></th>
                 <th class="col-1"></th>
             </tr>
