--- a/Quiz/Views/Shared/_Layout.cshtml
+++ b/Quiz/Views/Shared/_Layout.cshtml
@@ -77,8 +77,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - Quiz - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container text-center">
+            &copy; 2023 - Quiz
         </div>
     </footer>
 
