--- a/Quiz/Views/Shared/_Layout.cshtml
+++ b/Quiz/Views/Shared/_Layout.cshtml
@@ -58,6 +58,14 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
+                                    <li class="nav-item">
+                                        <a class="dropdown-item" asp-controller="Users" asp-action="UsersGrid">
+                                            Users
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
                                 </ul>
                             </li>
                         }               
