--- a/Quiz/Views/Quotes/Quotes.cshtml
+++ b/Quiz/Views/Quotes/Quotes.cshtml
@@ -7,7 +7,7 @@
         </div>
 
         <div class="col-6 text-end">
-            <a asp-area="Admin" asp-controller="Quotes" asp-action="CreateQuote" 
+            <a  asp-controller="Quotes" asp-action="CreateQuote" 
                 class="btn btn-outline-primary">
                 <i class="bi bi-plus-circle me-2"></i>
                 New Quote
