--- a/Quiz/Views/Users/UsersGrid.cshtml
+++ b/Quiz/Views/Users/UsersGrid.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<User>
+﻿@model IEnumerable<CreateUserVM>
 
 @{
     ViewData["Title"] = "Users";
@@ -6,7 +6,17 @@
 
 <div class="container justify-content-center col-md-8">
     <div class="row mb-2">
-        <h2 class="text-primary text-center">Users</h2>
+        <div class="col-6">
+            <h2 class="text-primary">Quotes</h2>
+        </div>
+
+        <div class="col-6 text-end">
+            <a  asp-controller="Users" asp-action="CreateUser"
+                class="btn btn-outline-primary">
+                <i class="bi bi-plus-circle me-2"></i>
+                New User
+            </a>
+        </div>
     </div>
 
     <table class="table table-bordered table-striped" width="100%" id="usersGridTable">
