--- a/Quiz/Views/Users/UsersGrid.cshtml
+++ b/Quiz/Views/Users/UsersGrid.cshtml
@@ -7,7 +7,7 @@
 <div class="container justify-content-center col-md-8">
     <div class="row mb-2">
         <div class="col-6">
-            <h2 class="text-primary">Quotes</h2>
+            <h2 class="text-primary">Users</h2>
         </div>
 
         <div class="col-6 text-end">
